--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <td>
                 <h1>about me</h1>
                 <ul>
-                    <li><a href="">28 year</a> / </li>
+                    <li><a href=""><i>28 year</i></a> / </li>
                     <li><a href="">Lviv</a> / </li>
                     <li><a href="">Freelance</a></li>
                 </ul>
@@ -47,7 +47,7 @@
                             <img src="./image/logo-2.png" alt="">
                             <h3>SEO optimization</h3>
                             <p class="mg-bt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum similique, ullam nemo ab ipsam reiciendis blanditiis non alias nobis aliquid adipisicing elit Architecto illo iure aperiam. Ipsa vel enim itaque aperiam magnam magni.</p>
-                            <img src="./image/logo-4.jpg" alt="">
+                            <img src="./image/logo-4.png" alt="">
                             <h3>data security</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum similique, ullam nemo ab ipsam reiciendis blanditiis non alias nobis aliquid adipisicing elit Architecto illo iure aperiam. Ipsa vel enim itaque aperiam magnam magni.</p>
                         </td>
