--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <h1>about me</h1>
                 <ul>
                     <li><a href=""><i>28 year</i></a> / </li>
-                    <li><a href="">Lviv</a> / </li>
-                    <li><a href="">Freelance</a></li>
+                    <li><a href=""><i>Lviv</i></a> / </li>
+                    <li><a href=""><i>Freelance</i></a></li>
                 </ul>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, suscipit. Optio commodi illo
                     recusandae, perspiciatis vero ratione illum perferendis dolor ipsum consequatur amet ea magnam
